[tool.poetry]
name = "yo-trans-be"
version = "0.1.0"
description = ""
authors = ["farroshayray <farros.hr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-cors = "^5.0.1"
flask-jwt-extended = "^4.7.1"
flask-sqlalchemy = "^3.1.1"
python-dotenv = "^1.0.1"
pymysql = "^1.1.1"
werkzeug = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
